# work

./: .gitignore  backlog.md  cmds.h
code/audio_pc/: capture_ur22.c  cmds.h  delay_audio.jl  delay_con_feedback.c  delay_wav.c  gen100hz_1min.jl  librosa_gtknow.py  procesa_audio.c  procesa_audio_stereo.c
code/audio_pc/cpp/: dsp  dsp.cpp  dsp_test  dsp_test.cpp
code/embedded/arduino/: cmds.h  gen.py
code/embedded/arduino/__DO_NOT_TOUCH_template/: debug.sh
code/embedded/arduino/adc/: adc.ino  debug.sh  dothis.py
code/embedded/arduino/audio/: audio.ino  debug.sh
code/embedded/arduino/capture_a0/: capture_a0.ino  chirp.jl  cmds.h  debug.sh  plot_adc.py  rc.jl  serial_capture.py
code/embedded/arduino/dac7564/: dac7564.ino  debug.sh
code/embedded/arduino/emu/: capture.py  debug.sh  emu.ino  plot.py  rc0.cir
code/embedded/arduino/euler/: debug.sh  euler.ino
code/embedded/arduino/keyboard/: debug.sh  keyboard.ino
code/embedded/arduino/keypad_lcd/: debug.sh  keypad_lcd.ino
code/embedded/arduino/logic_analizer/: debug.sh  logic_analizer.ino
code/embedded/arduino/miniRTOS/: debug.sh  miniRTOS.ino
code/embedded/arduino/rc/: capture.py  debug.sh  rc.ino  rc_python_plot.py  resp_freq.py  simu0.py
code/embedded/arduino/rrobin_coop/: debug.sh  rrobin_coop.ino
code/embedded/arduino/rrobin_preem/: debug.sh  rrobin_preem.ino
code/embedded/arduino/scheduler_preemtive/: debug.sh  scheduler_preemtive.ino
code/embedded/arduino/template/: borrar.c
code/embedded/arduino/template/launch_arduino/: launch.json
code/embedded/arduino/uart/: debug.sh  uart.ino
code/embedded/esp32/: notas.h
code/embedded/frdm_k64/: gen.py
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/: FRDM-K64F_manifest_v3_9.xml  SW-Content-Register.txt
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/components/button/: component_button_MK64F12.cmake
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/components/ft6x06/: driver_ft6x06_MK64F12.cmake
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/components/fxos8700cq/: driver_fxos8700cq_MK64F12.cmake
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/components/gpio/: component_gpio_adapter_MK64F12.cmake
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/components/i2c/: component_i2c_adapter_MK64F12.cmake
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/components/ili9341/: driver_ili9341_MK64F12.cmake
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/components/internal_flash/: fsl_adapter_flash.c  fsl_adapter_flash.h
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/components/led/: component_led_MK64F12.cmake
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/components/lists/: component_lists_MK64F12.cmake
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/components/log/: component_log_MK64F12.cmake  component_log_backend_debugconsole_MK64F12.cmake  component_log_backend_ringbuffer_MK64F12.cmake  (+1 more)
code/embedded/frdm_k64/SDK_2_11_0_FRDM-K64F/middleware/: middleware_baremetal_MK64F12.cmake
code/embedded/frdm_k64/freertos_hello/: freertos_hello_v3_9.xml  readme.txt
code/embedded/frdm_k64/freertos_hello/armgcc/: CMakeLists.txt
code/embedded/frdm_k64/led/: Makefile  flash.sh
code/embedded/frdm_k64/led/src/: main.c
code/embedded/frdm_k64/led_cmake/: CMakeLists.txt
code/embedded/frdm_k64/led_cmake/src/: main.c
code/embedded/frdm_k64/logic_analizer/: .gitignore  CMakeLists.txt
code/embedded/frdm_k64/logic_analizer/src/: main.c
code/embedded/frdm_k64/template/: CMakeLists.txt
code/embedded/frdm_k64/template/src/: main.c
code/embedded/frdm_k64/uart/: CMakeLists.txt
code/embedded/frdm_k64/uart/src/: main.c
code/embedded/frdm_k64/uart_logic_analyzer/: cmds.md
code/embedded/frdm_k64/uart_logic_analyzer/src/: main.c
code/embedded/frdm_kl28z/SDK_2_5_0_FRDM-KL28Z/: FRDM-KL28Z_manifest_v3_3.xml  FRDM-KL28Z_manifest_v3_4.xml  SW-Content-Register.txt
code/embedded/frdm_kl28z/SDK_2_5_0_FRDM-KL28Z/boards/frdmkl28z_om13588/usb_examples/usb_pd/bm/armgcc/: CMakeLists.txt
code/python/control/: 1_sobre_z.py  domain_coloring.py  plot.py  rc0.cir  study_RC.py
code/python/control/explor/: arctan.py  ceros.py  dos_rotaciones_complejas.py  identidad_euler.py  polinomio.py  proyeccion_seno_euler.py  vector_y_derivada.py
code/python/control/fourier/: con_numpy.py  dft_manual.py  fase0.py  fase1.py  orto.py
eng/: board_roja_fail.h
eng/audio_hacker/AudioHackerDesign/: AudioHacker_v1.2.GBL  AudioHacker_v1.2.GBS  AudioHacker_v1.2.GTL  AudioHacker_v1.2.GTO  AudioHacker_v1.2.TXT  AudioHacker_v1.2.brd  AudioHacker_v1.2.sch
eng/audio_hacker/AudioHackerDesign/AudioHacker_v1.2/: AudioHacker_v1.2.kicad_prl  AudioHacker_v1.2.kicad_pro  fp-lib-table
eng/audio_hacker/AudioHackerDesign/AudioHacker_v1.2/AudioHacker_v1.2.pretty/: 0207_10.kicad_mod  1X02.kicad_mod  1X03.kicad_mod  2X03.kicad_mod  AUDIOJACK.kicad_mod  CAP-CERAMIC-SMALL.kicad_mod  CAP-CERAMIC.kicad_mod  DIL08.kicad_mod  DUEMILANOVE_SHIELD_LARGE.kicad_mod  E2.5-5.kicad_mod  E2.5-6.kicad_mod  LOGO_SMALL.kicad_mod  OS.kicad_mod  SWITCH-TACT-B.kicad_mod  THUMBWHEEL1.kicad_mod  TRIM_POT.kicad_mod
eng/audio_hacker/AudioHackerDesign/AudioHacker_v1.2_1/: AudioHacker_v1.2-eagle-import.kicad_sym  sym-lib-table  ~AudioHacker_v1.2.brd.lck
eng/bench_embedded/: cmake_diagram.h  installzephyr_gdb_k64_arducli.h
eng/controlT/clasico/: cmds.h  control00.md  log05mar26.md  log12feb26.md  log14feb26.md  plan4semas.h
eng/controlT/moderno/: plan.h  plan_control_moderno_base.md
eng/frdmK64/: frdm.h
eng/ltspice/python_rlc/: dothis.py
eng/ltspice/rc/: Draft1.asc  Draft2.asc  rc.cir
eng/ltspice/rlc/: rlc.cir  rlc.csv
eng/ngspice/: rc.cir  rc_data.txt  rlc.cir  rlc2.cir
eng/real_time/: real_time.h
eng/rust-foundations/: ROADMAP.md  cmds.h  ejemplo.md  log11feb26.md  log_template.md  plan6_semas.h  todo.h
eng/ur22/: cmds.h
notas/deinsi/: notas_y_comandos.h
notas/doc/: FNET.chat  gen_html.sh  index.html  mywork_doctorado.h  reporte.md  revalidacion_master.h
notas/mapense/: 00.h
notas/pendulo_furuta/: pendulo_furuta.h
notas/pycontrol/: main.py  requirements.txt
notas/rpi/: cmds.h
notas/scikit_learn/: notas.h
(+3580 files in other folders)
